# c-lib-practice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  file  file.c  index.html  main  main.c  main_dynamic  malloc_test  malloc_test.c  malloc_test_leak.c  pinter_array.c  pointer_base  pointer_base.c  score.c  sensor.c  sensor.h  sensor_app  sensor_demo.c  struct  struct.c  test  test.c
include/: sensor.h
industrial_master/: CMakeLists.txt
src/: env_sensor  fileio.c  linklist.c  main.c  sensor.c  sensor.h
